--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ data/pythia_feverous_vldb
 notebooks/generated
 test-task3-manual-5-rr.tsv
 /src/pythia/taneFolder/
+/src/pythia/.Authentication.py.icloud
+/data/model/variables/
+/data/model/saved_model.pb
+.DS_Store
+data/.DS_Store
+src/.DS_Store
+src/pythia/.DS_Store
+.DS_Store
+src/.DS_Store
+src/pythia/.DS_Store
